# audio_common

audio_capture/: CMakeLists.txt
audio_capture/src/: audio_capture.cpp
audio_play/: CMakeLists.txt
audio_play/src/: audio_play.cpp
sound_play/debug/: debug_soundplay.launch  debug_soundplay_enough_wait.launch  debug_soundplay_short_wait.launch  soundplay-client.l
sound_play/scripts/: say.py  soundplay_node.py
